# thesis-functions

openwhisk/aes/: main.go
openwhisk/float/: float.py
openwhisk/matmul/: go.mod  main.go  test.json
openwhisk/whatlang/: Cargo.toml
openwhisk/whatlang/src/: lib.rs
spin/aes/: go.mod  main.go  spin.toml
spin/float/: app.py  spin.toml
spin/markdown2html/: app.py  spin.toml
spin/matmul/: go.mod  go.sum  main.go  spin.toml
spin/testing/: Cargo.toml  spin.toml
spin/testing/src/: lib.rs
spin/whatlang/: Cargo.toml  spin.toml
spin/whatlang/src/: lib.rs
